# Open-Golf

./: '  .gitignore  3  :  CMakeLists.txt  FBuildWorker  LICENSE  Makefile  Makefile.macos  README.md  build-html.sh  build-mac.sh  build-osx.sh  build.bat  client.vcxproj  fbuild.bff  html5_build.bat  math.mscript  minigolf.sln  shell.html  storage.json  testing.mscript  testing.sl  util.mscript
assets/: minigolf.cfg
assets/font/: font_large.fnt  font_medium.fnt
assets/holes/: hole1.hole  hole2.hole  hole3.hole  hole4.hole  hole5.hole  hole6.hole
assets/models/: cube.model  dirt_lumber.terrain_model  grass.terrain_model  grass_forest.terrain_model  grass_hill.terrain_model  hole-cover.model  path_cornerSharp.terrain_model  path_crossing.terrain_model  path_start.terrain_model  path_straight.terrain_model  sand_rocks.terrain_model  sphere.model  stone_hill.terrain_model  stone_mountain.terrain_model
data/: editor.static_data  minigolf.cfg  minigolf.cfg.mdata  minigolf.mdata_config  static_data.static_data  testing.mscript  testing.mscript.mdata  title_screen.static_data
data/audio/: confirmation_002.ogg.mdata  drop_001.ogg.mdata  drop_003.ogg.mdata  error_008.ogg.mdata  footstep_grass_004.ogg.mdata  impactPlank_medium_000.ogg.mdata  in_water.ogg.mdata
data/config/: editor.cfg  game.cfg
data/font/: Castle-Rock.ttf.golf_data  DroidSerif-Bold.ttf.import  DroidSerif-Bold.ttf.mdata  DroidSerif-Bold.ttf.mdata_font  FantasqueSansMono-Bold.ttf.golf_data  FantasqueSansMono-Bold.ttf.import  FantasqueSansMono-Bold.ttf.mdata  FantasqueSansMono-Bold.ttf.mdata_font  FiraSans-Bold.ttf.golf_data  FiraSans-Bold.ttf.import  FiraSans-Bold.ttf.mdata  FiraSans-Bold.ttf.mdata_font  MaterialIcons-Regular.ttf.import  SourceSans3-Bold.ttf.import  SourceSans3-Bold.ttf.mdata  SourceSans3-Bold.ttf.mdata_font  fa-regular-400.ttf.golf_data  fa-regular-400.ttf.import  fa-solid-900.ttf.golf_data  font_large.fnt.mdata  font_medium.fnt.mdata  font_small.fnt  font_small.fnt.mdata
data/holes/: hole1.hole  hole1.hole.mdata  hole2.hole.mdata  hole3.hole  hole3.hole.mdata  hole4.hole.mdata  hole5.hole  hole5.hole.mdata  hole6.hole  hole6.hole.mdata
data/levels/: level-1.level  level-10.level  level-11.level  level-12.level  level-13.level  level-14.level  level-15.level  level-16.level  level-17.level  level-18.level  level-19.level  level-2.level  level-20.level  level-3.level  level-4.level  level-5.level  level-7.level  level-8.level  level-9.level
data/models/: circle.model  cube.model  (+64 more)
libraries/: array.c  array.h  map.h  mscript.c  mscript.h  rnd.h  sl.c  sl.h  sokol_app.h  thread.h  tinyobj_loader_c.h  xatlas_wrapper.h
libs/: array.h  base64.c  base64.h  cimgui.cpp  cimgui.h  glad.c  glad.h  lightmapper.h  mbuild.h  sokol_app.h  sokol_gfx.h  sokol_time.h  vec.h
model_generator_scripts/: bezier_ramp.scm  bulge.scm  curved_halfpipe.scm  ground.scm  halfpipe.scm  hump.scm  river_turn.scm  tube.scm  turn.scm
scripts/: a.mscript  b.mscript  c.mscript  math.mscript  terrain_generation_common.mscript  testing.mscript  util.mscript
src/: assets.c  assets.h  audio.c  config.c  config.h  controls.c  controls.h  data_stream.c  data_stream.h  file.c  file.h  game.c  game.h  game_editor.c  game_editor.h  hole.c  hole.h  hotloader.c  hotloader.h  lightmaps.c  log.c  log.h  main.c  maths.c  maths.h  mcommon.c  mcommon.h  mdata.c  mdata.h  mfile.c  mfile.h  mlog.c  mscript.c  mscript.h  mstring.c  mstring.h  obj_converter.c  obj_converter.h  profiler.c  profiler.h  (+5 more)
src/common/: CMakeLists.txt  alloc.c  audio.c  audio.h  base64.c  base64.h  bvh.c  bvh.h  common.h  data.c  data.h  debug_console.c  debug_console.h  file.c  file.h  graphics.c  graphics.h  inputs.c  inputs.h  json.c  json.h  level.c  level.h  log.c  log.h  map.c  map.h  maths.c  maths.h  renderer.c  renderer.h  script.c  script.h  storage.c  storage.h  string.c  thread.c  thread.h  vec.c  vec.h
src/editor/: CMakeLists.txt  draw.c  draw.h  editor.c  editor.h  gi.c  gi.h  gizmo.c  gizmo.h  main.c
src/golf/: CMakeLists.txt  alloc.c  alloc.h  allocator.h  assets.c  assets.h  audio.c  audio.h  base64.c  base64.h  bvh.c  bvh.h  config.c  config.h  controls.c  controls.h  data.c  data.h  data_stream.c  data_stream.h  debug_console.c  director.c  director.h  draw.c  draw.h  editor.c  editor.h  file.c  file.h  game.c  game.h  game_editor.c  game_editor.h  gi.c  gi.h  gizmo.c  gizmo.h  golf.c  golf.h  hole.c  (+47 more)
src/golf/shaders/: aim_helper.glsl.h  aim_icon.glsl  aim_icon.glsl.h  aim_icon.h  aim_line.glsl.h  ball.glsl  ball.glsl.h  ball.h  ball_hidden.glsl  ball_hidden.glsl.h  course_editor_ground.h  course_editor_water.h  cup.glsl  cup.glsl.h  cup.h  diffuse_color_material.glsl.h  editor_water.glsl.h  environment.glsl.h  environment.h  environment_material.glsl.h  fxaa.glsl.h  fxaa.h  hole_editor_environment.glsl  hole_editor_environment.glsl.h  hole_editor_environment.h  hole_editor_terrain.glsl.h  hole_editor_water.glsl.h  occluded_ball.glsl  occluded_ball.glsl.h  pass_through.glsl.h  pass_through.h  render_image.glsl.h  single_color.glsl.h  single_color.h  solid_color_material.glsl.h  terrain.glsl  terrain.glsl.h  terrain.h  texture.glsl  texture.glsl.h  (+11 more)
src/golf/shaders/bare/: aim_helper_fs.glsl  aim_helper_vs.glsl  aim_icon_fs.glsl  aim_icon_vs.glsl  ball_fs.glsl  ball_vs.glsl  cup_fs.glsl  cup_vs.glsl  environment_fs.glsl  environment_vs.glsl  fxaa_fs.glsl  fxaa_vs.glsl  hole_editor_environment_fs.glsl  hole_editor_environment_vs.glsl  hole_editor_terrain_fs.glsl  hole_editor_terrain_vs.glsl  hole_editor_water_fs.glsl  hole_editor_water_vs.glsl  occluded_ball_fs.glsl  occluded_ball_vs.glsl  pass_through_fs.glsl  pass_through_vs.glsl  single_color_fs.glsl  single_color_vs.glsl  terrain_fs.glsl  terrain_vs.glsl  texture_fs.glsl  texture_vs.glsl  ui_fs.glsl  ui_single_color_fs.glsl  ui_single_color_vs.glsl  ui_vs.glsl  water_around_ball_fs.glsl  water_around_ball_vs.glsl  water_fs.glsl  water_ripple_fs.glsl  water_ripple_vs.glsl  water_vs.glsl
terrain_generation/: common.mscript
tests/: mscript_tests.c  mscript_tests.h  tests.c  tests.h
(+743 files in other folders)
