cmake_minimum_required(VERSION 3.12)

project(minigolf)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

include_directories(SYSTEM src/3rd_party)
include_directories(src)

if(CMAKE_SYSTEM_NAME STREQUAL Windows)
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
    add_compile_definitions(SOKOL_GLCORE33)
    add_compile_definitions(GOLF_PLATFORM_WINDOWS)
elseif(CMAKE_SYSTEM_NAME STREQUAL Linux)
    add_compile_definitions(SOKOL_GLCORE33)
    add_compile_definitions(GOLF_PLATFORM_LINUX)
else()
endif()

add_subdirectory(src/3rd_party/cimgui)
add_subdirectory(src/3rd_party/fast_obj)
add_subdirectory(src/3rd_party/glad)
add_subdirectory(src/3rd_party/glfw)
add_subdirectory(src/3rd_party/lightmapper)
add_subdirectory(src/3rd_party/mattiasgustavsson_libs)
add_subdirectory(src/3rd_party/miniz)
add_subdirectory(src/3rd_party/parson)
add_subdirectory(src/3rd_party/sokol)
add_subdirectory(src/3rd_party/stb)
add_subdirectory(src/3rd_party/xatlas)
add_subdirectory(src/common)
add_subdirectory(src/golf)

if(CMAKE_SYSTEM_NAME STREQUAL Windows OR CMAKE_SYSTEM_NAME STREQUAL Linux)
    add_subdirectory(src/editor)
endif()
